--- a/app/src/main/res/layout/loginsignup.xml
+++ b/app/src/main/res/layout/loginsignup.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/logginPage"
     android:layout_width="match_parent"
@@ -13,50 +14,64 @@
         android:id="@+id/background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/backgroundloggin" />
+        android:background="@drawable/backgroundloggin"
+        tools:layout_editor_absoluteX="-73dp"
+        tools:layout_editor_absoluteY="-228dp" />
 
     <ImageView
         android:id="@+id/logo"
         android:layout_width="106dp"
         android:layout_height="137dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="300dp"
-        android:background="@drawable/logo" />
+        android:background="@drawable/logo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.37" />
 
     <TextView
         android:id="@+id/ellugartext"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/logo"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="124dp"
         android:fontFamily="@font/jua_normal"
         android:text="@string/el_lugar_mas_seguro_para_tu_dinero"
         android:textColor="#ffffff"
-        android:textSize="16dp" />
+        android:textSize="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/background"
+        app:layout_constraintTop_toBottomOf="@+id/logo"
+        app:layout_constraintVertical_bias="0.26" />
 
     <Button
         android:id="@+id/login_buttom"
         android:layout_width="315dp"
         android:layout_height="45dp"
         android:layout_below="@+id/ellugartext"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="201dp"
         android:background="@drawable/boton_redondeado"
         android:fontFamily="@font/jua_normal"
         android:text="Crear cuenta nueva"
         android:textAllCaps="false"
-        android:textColor="#ffffff" />
+        android:textColor="#ffffff"
+        app:layout_constraintBottom_toBottomOf="@+id/background"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ellugartext"
+        app:layout_constraintVertical_bias="0.53" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="21dp"
         android:layout_below="@id/login_buttom"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="24dp"
         android:fontFamily="@font/jua_normal"
         android:text="Ya tiene cuenta?"
-        android:textColor="@color/azulalkeosc" />
+        android:textColor="@color/azulalkeosc"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_buttom"
+        app:layout_constraintVertical_bias="0.26" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
