--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="azulalke">#63B8FC</color>
     <color name="azulalkeosc">#1a87dd</color>
+    <color name="grisAlke">#A6AFBA</color>
+    <color name="verdeAlke">#72DB31</color>
 </resources>
