--- a/app/src/main/res/layout/fragment_loginsignup.xml
+++ b/app/src/main/res/layout/fragment_loginsignup.xml
@@ -4,14 +4,15 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/logginPage"
+    android:id="@+id/loginsignup"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".fragmentos.Loginsignup"
+    >
 
 
     <ImageView
-        android:id="@+id/background"
+        android:id="@+id/backgroundloginsignup"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/backgroundloggin"
@@ -19,7 +20,7 @@
         tools:layout_editor_absoluteY="0dp" />
 
     <ImageView
-        android:id="@+id/logo"
+        android:id="@+id/logo1"
         android:layout_width="106dp"
         android:layout_height="137dp"
         android:background="@drawable/logo"
@@ -33,7 +34,7 @@
         android:id="@+id/ellugartext"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/logo"
+        android:layout_below="@id/logo1"
         android:fontFamily="@font/jua_normal"
         android:text="@string/el_lugar_mas_seguro_para_tu_dinero"
         android:textColor="#ffffff"
@@ -41,17 +42,17 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline12"
         app:layout_constraintStart_toStartOf="@+id/guideline10"
-        app:layout_constraintTop_toBottomOf="@+id/logo"
+        app:layout_constraintTop_toBottomOf="@+id/logo1"
         app:layout_constraintVertical_bias="0.26" />
 
     <Button
-        android:id="@+id/login_buttom"
+        android:id="@+id/botoncrearcuenta"
         android:layout_width="315dp"
         android:layout_height="50dp"
         android:layout_below="@+id/ellugartext"
         android:background="@drawable/boton_redondeado"
         android:fontFamily="@font/jua_normal"
-        android:text="Crear cuenta nueva"
+        android:text="@string/crear_cuenta_nueva"
         android:textAllCaps="false"
         android:textColor="#ffffff"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
@@ -61,16 +62,17 @@
         app:layout_constraintVertical_bias="0.89" />
 
     <TextView
+        android:id="@+id/tienescuentatext"
         android:layout_width="wrap_content"
         android:layout_height="21dp"
-        android:layout_below="@id/login_buttom"
+        android:layout_below="@id/botoncrearcuenta"
         android:fontFamily="@font/jua_normal"
-        android:text="Ya tiene cuenta?"
+        android:text="@string/ya_tiene_cuenta"
         android:textColor="@color/azulalkeosc"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_buttom"
+        app:layout_constraintTop_toBottomOf="@+id/botoncrearcuenta"
         app:layout_constraintVertical_bias="0.72" />
 
     <androidx.constraintlayout.widget.Guideline
