--- a/app/src/main/res/layout/fragment_login_page.xml
+++ b/app/src/main/res/layout/fragment_login_page.xml
@@ -2,18 +2,20 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/login_page"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/flechaverde">
+    android:background="@drawable/flechaverde"
+    tools:context=".fragmentos.LoginPage">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textlogeayempieza"
         android:layout_width="315dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
         android:layout_marginBottom="360dp"
         android:fontFamily="@font/jua_normal"
-        android:text="Logea y empieza a transferir!"
+        android:text="@string/logea_y_empieza_a_transferir"
         android:textSize="32sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline8"
@@ -23,117 +25,105 @@
         app:lineHeight="52sp" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/imagerectanglepng"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintEnd_toStartOf="@+id/guideline8"
+        app:layout_constraintStart_toStartOf="@+id/textemail1"
+        app:layout_constraintTop_toBottomOf="@+id/textemail1"
         app:srcCompat="@drawable/rectangle" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textemail1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
         android:layout_marginTop="98dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/jua_normal"
-        android:text="Email"
-        android:textSize="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.07"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        android:text="@string/email"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/imagerectanglepng"
+        app:layout_constraintEnd_toStartOf="@+id/guideline8"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/guideline9"
+        app:layout_constraintTop_toBottomOf="@+id/textlogeayempieza" />
 
     <TextView
-        android:id="@+id/editTextTextEmailAddress"
+        android:id="@+id/textingresatuemail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:fontFamily="@font/jua_normal"
-        android:text="Ingresa tu email"
+        android:text="@string/ingresa_tu_email"
         android:textColor="#A6AFBA"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintBottom_toBottomOf="@+id/imagerectanglepng"
+        app:layout_constraintEnd_toEndOf="@+id/imagerectanglepng"
         app:layout_constraintHorizontal_bias="0.08"
-        app:layout_constraintStart_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="@+id/imageView2" />
+        app:layout_constraintStart_toStartOf="@+id/imagerectanglepng"
+        app:layout_constraintTop_toTopOf="@+id/imagerectanglepng" />
 
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/imagerectanglepng2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintStart_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintEnd_toStartOf="@+id/guideline8"
+        app:layout_constraintStart_toStartOf="@+id/guideline9"
+        app:layout_constraintTop_toBottomOf="@+id/textcontrasenia1"
         app:srcCompat="@drawable/rectangle" />
 
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textcontrasenia1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/jua_normal"
-        android:text="Contraseña"
-        android:textSize="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="@string/contrase_a"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/imagerectanglepng2"
+        app:layout_constraintEnd_toStartOf="@+id/guideline8"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
-
-    />
+        app:layout_constraintStart_toStartOf="@+id/guideline9"
+        app:layout_constraintTop_toBottomOf="@+id/imagerectanglepng" />
 
 
     <Button
-        android:id="@+id/login_buttom2"
+        android:id="@+id/botonlogin"
         android:layout_width="316dp"
         android:layout_height="50dp"
+        android:layout_marginTop="224dp"
         android:background="@drawable/boton_redondeado"
         android:fontFamily="@font/jua_normal"
         android:text="Login"
         android:textColor="#ffffff"
-        app:layout_constraintBottom_toTopOf="@+id/guideline11"
+        app:layout_constraintBottom_toTopOf="@+id/textcrearnuevacuenta"
         app:layout_constraintEnd_toStartOf="@+id/guideline8"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/guideline9"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.89" />
+        app:layout_constraintTop_toBottomOf="@+id/imagerectanglepng2" />
 
     <TextView
-        android:id="@+id/editTextTextPassword"
+        android:id="@+id/textingresatupasword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:fontFamily="@font/jua_normal"
-        android:text="Ingresa tu contraseña"
+        android:text="@string/ingresa_tu_contrase_a"
         android:textColor="#A6AFBA"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
-        app:layout_constraintEnd_toEndOf="@+id/imageView3"
+        app:layout_constraintBottom_toBottomOf="@+id/imagerectanglepng2"
+        app:layout_constraintEnd_toEndOf="@+id/imagerectanglepng2"
         app:layout_constraintHorizontal_bias="0.08"
-        app:layout_constraintStart_toStartOf="@+id/imageView3"
-        app:layout_constraintTop_toTopOf="@+id/imageView3" />
+        app:layout_constraintStart_toStartOf="@+id/imagerectanglepng2"
+        app:layout_constraintTop_toTopOf="@+id/imagerectanglepng2" />
 
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="21dp"
-        android:layout_below="@id/imageView3"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="440dp"
-        android:fontFamily="@font/jua_normal"
-        android:text="Olvidaste tu contraseña?"
-        android:textColor="@color/azulalkeosc"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.769"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
-
-    <TextView
+        android:id="@+id/textcrearnuevacuenta"
         android:layout_width="wrap_content"
         android:layout_height="21dp"
         android:fontFamily="@font/jua_normal"
@@ -141,37 +131,40 @@
         android:textColor="@color/azulalkeosc"
         app:layout_constraintBottom_toTopOf="@+id/guideline11"
         app:layout_constraintEnd_toStartOf="@+id/guideline8"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/guideline9"
-        app:layout_constraintTop_toBottomOf="@+id/login_buttom2"
+        app:layout_constraintTop_toBottomOf="@+id/botonlogin"
         app:layout_constraintVertical_bias="0.72" />
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/icon_eye"
         android:layout_width="45dp"
         android:layout_height="36dp"
-        android:layout_marginStart="312dp"
         app:endIconMode="password_toggle"
         app:endIconTint="#A6AFBA"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
-        app:layout_constraintEnd_toEndOf="@+id/imageView3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView3">
+        app:layout_constraintBottom_toBottomOf="@+id/imagerectanglepng2"
+        app:layout_constraintEnd_toEndOf="@+id/imagerectanglepng2"
+        app:layout_constraintHorizontal_bias="0.948"
+        app:layout_constraintStart_toStartOf="@+id/guideline9"
+        app:layout_constraintTop_toTopOf="@+id/imagerectanglepng2">
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/olvidastetucontra"
         android:layout_width="161dp"
         android:layout_height="15dp"
-        android:layout_marginStart="157dp"
-        android:layout_marginTop="8dp"
         android:fontFamily="@font/jua_normal"
         android:lineHeight="17.5dp"
-        android:text="Olvidaste tu contraseña?"
+        android:text="@string/olvidaste_tu_contrase_a"
         android:textColor="@color/azulalkeosc"
-        android:textSize="14dp"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline8"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/guideline9"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+        app:layout_constraintTop_toBottomOf="@+id/imagerectanglepng2"
+        app:layout_constraintVertical_bias="0.04000002" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline8"
