--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
     <color name="azulalkeosc">#1a87dd</color>
     <color name="grisAlke">#A6AFBA</color>
     <color name="verdeAlke">#72DB31</color>
+    <color name="grisAlkeclaro">#F3F4F5</color>
 </resources>
+
+
